	  completion list.
	+ add 'list' option to /bind to print all the available commands.
	+ show setter/time in +I lists
	+ apply -usermode before -autosendcmd (bug #548).
	+ reduce memory usage of the scrollback buffer and make the display
	  in /sb status more accurate (higher).
	+ fix data getting dropped when a lot is sent at a time (e.g. when
	  attaching to irssi-proxy, bug #528).
	- fix leak with $L expando.
	- fix possible crash with /script reset.
	- ignore exceptions take precedence over ignores in all cases.
	- honour -channels preference for ignore -replies (bug #227).
	- Fix mode display in whois with unreal (379 numeric) (bug #479).
	- Fix regressions that prevented external modules from building/working
	  (bugs #537 #539).
	- Fix /set hilight_level not taking effect immediately (bug #598).

v0.8.12 2007-10-06  The Irssi team <staff@irssi.org>
	+ Some changes to character set recoding.
	+ Rewrite SSL connection/handshake code.
	+ Remove support for glib 1.x.
	+ Do not send our hostname to the server (bug #488).
	+ Add $tag to 'window' item in default configuration.
	+ Pick up host changes on charybdis and ircu servers (396 numeric).
	+ Show various errors such as "cannot send to channel" and "cannot
	  /msg, user is +g" in the channel or query window, if possible,
	  and always include the user or channel name.
	+ Channel forwarding in hyperion and charybdis is now recognized
	  (470 numeric) and the target channel is joined in the window where
	  the original channel would have been joined.
	+ Add support for the ACCEPT command, which is part of the CALLERID
	  server side ignore system in hybrid7 and derived ircds.
	+ Make /WINDOW GOTO start searching at the window after the active
	  one and stop at the one before (bug #332).
	+ Improve completion for /SET.
	+ Use CASEMAPPING dependent comparison to match channel names.
	  Patch by Jon Mayo (bug #436).
	+ Various improvements to the help files.
	+ Add Perl bindings for some gui_entry methods