@@ -217,6 +217,8 @@ proxy/listen.c:
 
  "proxy client connected", CLIENT_REC
  "proxy client disconnected", CLIENT_REC
+ "proxy client command", CLIENT_REC, char *args, char *data
+ "proxy client dump", CLIENT_REC, char *data
 
 FE common
 ---------
