@@ -1,0 +1,5 @@
+#include "module.h"
+
+MODULE = Irssi::Irc::Client  PACKAGE = Irssi::Irc
+PROTOTYPES: ENABLE
+
