@@ -14,6 +14,7 @@ Irssi::Irc::Netsplit		T_PlainObj
 Irssi::Irc::Netsplitserver	T_PlainObj
 Irssi::Irc::Netsplitchannel	T_PlainObj
 Irssi::Irc::Notifylist		T_PlainObj
+Irssi::Irc::Client		T_IrssiObj
 
 INPUT
 
